# futur

./: README.md  __init__.py  pyproject.toml  setup.py
loaders/: classification.py
tests/: splitters.py  test_datasets.py  test_splitters.py
thor/datasets/: mvtech.py
thor/loaders/: __init__.py
thor/splitters/: __init__.py  supervised_AD.py  supervised_base.py
thor/trainers/: base_trainer.py  loss.py  metrics.py  trainers.py
utils/: __init__.py
utils/datasets/: mvtech.py
utils/splitters/: supervised_AD.py  supervised_base.py  unsupervised_AD.py  unsupervised_base.py
utils/trainers/: metrics.py
