[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futur"
version = "0.1.0"
description = "Custom objects to train my models"
authors = [{ name = "Théo MOREAU", email = "theo.moreau@octo.com" }]
license = { file = "" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [

]

[project.scripts]
my_command = "my_package.my_module:main" 